Fix backface issue on mobile

--- a/cards/css/styles.scss
+++ b/cards/css/styles.scss
@@ -100,6 +100,7 @@ li {
 
 
 .front, .back {
+	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden; // hide back of card during flip
 	position: absolute;
 	top: 0;
